# DiplomacyGM

./: .gitignore  .gitmodules  Changelog.md  README.md  config_defaults.toml  main.py  pyproject.toml  requirements.txt  signups_allocator.py
DiploGM/: bot.py  config.py  errors.py  manager.py  orders.ebnf  parse_board_params.py  parse_edit_state.py  parse_order.py  perms.py
DiploGM/adjudicator/: adjudicator.py  builds_adjudicator.py  defs.py  make_adjudicator.py  mapper.js  mapper.py  moves_adjudicator.py  retreats_adjudicator.py  utils.py  validate_order.py
DiploGM/cogs/: administration.py  command.py  community.py  development.py  fog_of_war.py  game_management.py  moderation.py  party.py  player.py  reputation.py  schedule.py  slash_substitute.py  spectator.py
DiploGM/db/: database.py  schema.sql
DiploGM/events/: eventbus.py
DiploGM/mapper/: mapper.js  mapper.py  order_drawer.py  panel.py  utils.py
DiploGM/models/: board.py  extension.py  order.py  player.py  province.py  rep_delta.py  spec_request.py  turn.py  unit.py
DiploGM/utils/: __init__.py  map_archive.py  orders.py  repository.py  sanitise.py  send_message.py
bot/: _command.py  bot.py  command.py  config.py  diplo_bot.py  perms.py  utils.py
bot/cogs/: admin.py  fog_of_war.py  game.py  info.py  party.py  player.py  server.py  spectate.py
bot/core/: eventbus.py  events.py  main.py
bot/listeners/: base.py  loader.py  sample.py
diplomacy/persistence/: board.py  manager.py  order.py  player.py
test/: test_core.py  test_dp.py  test_transform.py  utils.py
variants/: README.md
(+58 files in other folders)
