[project]
name = "DiplomacyGM"
version = "1.8.0"
requires-python = ">=3.12"

[tool.black]
target-version = ['py311']
[tool.pylint."messages control"]
disable = ["W1203"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.typecheck]
generated-members = ["discord.*", "discord.ext.commands.*"]
ignored-modules = ["discord"]
ignored-classes = ["discord.ext.commands.Context"]
